--- a/cart.html
+++ b/cart.html
@@ -68,6 +68,11 @@
                             <li><a href="#" data-toggle="list">日本語</a></li>
                             <li><a href="#" data-toggle="list">English</a></li>
                         </ul>
+                        <ul class="container memberHello col-lg-12">
+                            <li>
+                                <span>周杰倫</span>會員，你好
+                            </li>
+                        </ul>
                         <ul class="container navbar-zh" id="navbarMain">
 
                         </ul>
@@ -268,6 +273,181 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="cart-list">
+                            <div class="row">
+                                <div class=" cart-item col-lg-6 d-flex name">
+                                    <div class="cart_img">
+                                        <a href="product.html">
+                                            <img src="img/tnn2.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <a href="product.html">
+                                        <h3>【台南一日遊】深度台南包車一日遊</h3>
+                                    </a>
+                                </div>
+                                <div class=" cart-item col-lg-2 date">
+                                    <span>2019/07/28</span>
+                                </div>
+                                <div class=" cart-item col-lg-2 quantity">
+                                    <span>
+                                        <i class="reduce">-</i>
+                                        <input type="text" value="1" readonly="readonly">
+                                        <i class="add">+</i>
+                                    </span>
+                                </div>
+                                <div class=" cart-item col-lg-2 price">
+                                    TWD <span class="value">3800</span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="cart-item col-6 remove">
+                                    <a href="#">移除</a>
+                                </div>
+                                <div class="cart-item col-6 subtotal">
+                                    TWD <span class="value">0</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cart-list">
+                            <div class="row">
+                                <div class=" cart-item col-lg-6 d-flex name">
+                                    <div class="cart_img">
+                                        <a href="product.html">
+                                            <img src="img/tnn2.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <a href="product.html">
+                                        <h3>【台南一日遊】深度台南包車一日遊</h3>
+                                    </a>
+                                </div>
+                                <div class=" cart-item col-lg-2 date">
+                                    <span>2019/07/28</span>
+                                </div>
+                                <div class=" cart-item col-lg-2 quantity">
+                                    <span>
+                                        <i class="reduce">-</i>
+                                        <input type="text" value="1" readonly="readonly">
+                                        <i class="add">+</i>
+                                    </span>
+                                </div>
+                                <div class=" cart-item col-lg-2 price">
+                                    TWD <span class="value">3800</span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="cart-item col-6 remove">
+                                    <a href="#">移除</a>
+                                </div>
+                                <div class="cart-item col-6 subtotal">
+                                    TWD <span class="value">0</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cart-list">
+                            <div class="row">
+                                <div class=" cart-item col-lg-6 d-flex name">
+                                    <div class="cart_img">
+                                        <a href="product.html">
+                                            <img src="img/tnn2.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <a href="product.html">
+                                        <h3>【台南一日遊】深度台南包車一日遊</h3>
+                                    </a>
+                                </div>
+                                <div class=" cart-item col-lg-2 date">
+                                    <span>2019/07/28</span>
+                                </div>
+                                <div class=" cart-item col-lg-2 quantity">
+                                    <span>
+                                        <i class="reduce">-</i>
+                                        <input type="text" value="1" readonly="readonly">
+                                        <i class="add">+</i>
+                                    </span>
+                                </div>
+                                <div class=" cart-item col-lg-2 price">
+                                    TWD <span class="value">3800</span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="cart-item col-6 remove">
+                                    <a href="#">移除</a>
+                                </div>
+                                <div class="cart-item col-6 subtotal">
+                                    TWD <span class="value">0</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cart-list">
+                            <div class="row">
+                                <div class=" cart-item col-lg-6 d-flex name">
+                                    <div class="cart_img">
+                                        <a href="product.html">
+                                            <img src="img/tnn2.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <a href="product.html">
+                                        <h3>【台南一日遊】深度台南包車一日遊</h3>
+                                    </a>
+                                </div>
+                                <div class=" cart-item col-lg-2 date">
+                                    <span>2019/07/28</span>
+                                </div>
+                                <div class=" cart-item col-lg-2 quantity">
+                                    <span>
+                                        <i class="reduce">-</i>
+                                        <input type="text" value="1" readonly="readonly">
+                                        <i class="add">+</i>
+                                    </span>
+                                </div>
+                                <div class=" cart-item col-lg-2 price">
+                                    TWD <span class="value">3800</span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="cart-item col-6 remove">
+                                    <a href="#">移除</a>
+                                </div>
+                                <div class="cart-item col-6 subtotal">
+                                    TWD <span class="value">0</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cart-list">
+                            <div class="row">
+                                <div class=" cart-item col-lg-6 d-flex name">
+                                    <div class="cart_img">
+                                        <a href="product.html">
+                                            <img src="img/tnn2.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <a href="product.html">
+                                        <h3>【台南一日遊】深度台南包車一日遊</h3>
+                                    </a>
+                                </div>
+                                <div class=" cart-item col-lg-2 date">
+                                    <span>2019/07/28</span>
+                                </div>
+                                <div class=" cart-item col-lg-2 quantity">
+                                    <span>
+                                        <i class="reduce">-</i>
+                                        <input type="text" value="1" readonly="readonly">
+                                        <i class="add">+</i>
+                                    </span>
+                                </div>
+                                <div class=" cart-item col-lg-2 price">
+                                    TWD <span class="value">3800</span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="cart-item col-6 remove">
+                                    <a href="#">移除</a>
+                                </div>
+                                <div class="cart-item col-6 subtotal">
+                                    TWD <span class="value">0</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12">
                         <div class="total_bar">
@@ -334,7 +514,6 @@
             showSubpage(subpageIndex += n);
         }
 
-        // Thumbnail image controls
         function currentSubpage(n) {
             showSubpage(subpageIndex = n);
         }
@@ -342,6 +521,11 @@
         function showSubpage(n) {
             var i;
             var pages = document.getElementsByClassName("page_item");
+            // cartLists = document.querySelectorAll('.cart-list');
+
+            // for (let a = 0; a < 5; a++) {
+            //     cartLists[a + (n-1)*5].style.display = 'block';
+            // }
             if (n > pages.length) { subpageIndex = pages.length }
             if (n < 1) { subpageIndex = 1 }
 
@@ -350,7 +534,12 @@
             }
 
             pages[subpageIndex - 1].className += " active";
+
+
         };
+
+
+
 
         var lists = document.querySelectorAll('.cart-list');
 
