--- a/product.html
+++ b/product.html
@@ -70,6 +70,11 @@
                             <li><a href="#" data-toggle="list">日本語</a></li>
                             <li><a href="#" data-toggle="list">English</a></li>
                         </ul>
+                        <ul class="container memberHello col-lg-12">
+                            <li>
+                                <span>周杰倫</span>會員，你好
+                            </li>
+                        </ul>
                         <ul class="container navbar-zh" id="navbarMain">
 
                         </ul>
