--- a/f_html/product.html
+++ b/f_html/product.html
@@ -4,10 +4,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv='X-UA-Compatible' content='chrome=1' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/datepicker.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -20,10 +20,12 @@
 </head>
 
 <body>
+
+
     <div class="wrap">
-        <div class="wrap-shadows d-lg-none collapse">
+        <div class="wrap-shadows d-lg-none" style="display: none;">
         </div>
-        <p></p>
+        <!-- updata-begin -->
         <div class="login_bar modal fade">
             <div class="modal-dialog modal-dialog-centered justify-content-center">
                 <div class="sginIn">
@@ -57,8 +59,9 @@
                 </div>
             </div>
         </div>
-<!-- updata-begin -->
+        <!-- updata-end -->        
         <div class="header">
+            <!-- updata-begin -->
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-lg-3 logo">
@@ -67,8 +70,8 @@
                     <div class="navbar d-lg-flex col-lg-9 col-0 collapse" id="navbarMoblie">
                         <ul class="Language container list-group">
                             <li><a href="index.html" class="active" data-toggle="list">繁體中文</a></li>
-                            <li><a href="#" class="" data-toggle="list">日本語</a></li>
-                            <li><a href="#" class="" data-toggle="list">English</a></li>
+                            <li><a href="#" data-toggle="list">日本語</a></li>
+                            <li><a href="#" data-toggle="list">English</a></li>
                         </ul>
                         <ul class="container memberHello col-lg-12">
                             <li>
@@ -85,87 +88,89 @@
                     </div>
                 </div>
             </div>
+                    <!-- updata-end -->
+        </div>
+        <div class="jumbotron" style="background-image: url('img/tnn3.jpg');">
 
         </div>
-<!-- updata-end -->
 
-        <div class="jumbotron-fluid">
-            <div class="owl-carousel owl-theme main-carousel">
-                <div class="item" style="background-image: url('img/bg.jpg')"><a href="product.html"></a></div>
-                <div class="item" style="background-image: url('img/bg3.jpg')"><a href="product.html"></a></div>
-            </div>
-        </div>
+
         <div class="section">
             <div class="container">
-                <h2>最夯遊程</h2>
-                <div class="owl-carousel Tour1 owl-Tour">
-                    <div class="Tour-item"><a href="product.html">
-                            <div class="tour_img" style="background-image: url('img/tnn6.jpg')">
+                <div class="row">
+                    <div class="col-12 col-lg-8">
+                        <div class="product-name">
+                            <h2 class="col-11">【台南一日遊】深度台南包車一日遊</h2>
+
+                        </div>
+                        <div class="product_benefit">
+                            <ul>
+                                <li>
+                                    <span class="fas fa-clock"></span> <span>行程時長8小時</span>
+                                </li>
+                                <li>
+                                    <span class="fas fa-calendar-times"></span> <span>4天前可免費取消</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="product_img" style="box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);">
+                            <img src="img/tnn3.jpg" alt="">
+                        </div>
+                        <div class="product_abstract">
+                            <p>台南是台灣最早開發區域，整個台南看起來舊舊的，卻有迷人的氣息，就如同「 老酒成甕底，越成越香
+                                」，現在的台南有最新的奇美博物館、最老的瓦盤鹽田，新與舊的融合一點也不衝突，如果來到台南沒有交通工具，不仿包車深度玩台南，一日時間帶你吃美食探索台南景點。</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="booking_bar">
+                            <div class="booking_item price">
+                                <span>TWD</span>
+                                <h3 class="value">3,800</h3>
                             </div>
-                            <div class="tour_detail">
+                            <div class="booking_item">
                                 <ul>
-                                    <li>
-                                        <h3>【台南一日遊】深度台南包車一日遊</h3>
+                                    <li><span class="far fa-calendar-alt"></span> <span>起迄日</span>
+                                        <div class="d-inline-block"><span class="startDay">2019/09/01</span>～<span
+                                                class="endDay">2019/09/10</span></div>
                                     </li>
-                                    <li>
-                                        <span class="far fa-user"></span> <span>可報名人數</span> <span>1</span>
+                                    <li><span class="far fa-file-alt"></span> <span>3個工作日內確認訂單</span></li>
+                                    <li><span></span><span></span></li>
+                                </ul>
+                                <div class="btn">
+                                    <a href="cart.html">加入購物車</a>
+                                </div>
+                            </div>
+                            <div class="booking_item">
+                                <ul>
+                                    <li><span class="far fa-calendar-check"></span> <span>已訂購人數</span> <span>999</span>
                                     </li>
-                                    <li>
-                                        <h4 class="price">TWD <span class="value">3800</span></h4>
-                                    </li>
+                                    <li><span class="far fa-user"></span> <span>可報名人數</span> <span>1</span></li>
                                 </ul>
                             </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="section">
-            <div class="container">
-                <h2>優惠遊程</h2>
-                <div class="owl-carousel Tour1 owl-Tour">
-                    <div class="Tour-item"><a href="product.html">
-                            <div class="tour_img" style="background-image: url('img/tnn9.jpg')"></div>
-                            <div class="tour_detail">
-                                <ul>
-                                    <li>
-                                        <h3>【台南一日遊】深度台南包車一日遊</h3>
-                                    </li>
-                                    <li>
-                                        <span class="far fa-user"></span> <span>可報名人數</span> <span>1</span>
-                                    </li>
-                                    <li>
-                                        <h4 class="price">TWD <span class="value">3800</span></h4>
-                                    </li>
-                                </ul>
-                            </div>
-                        </a></div>
-
-                </div>
-
-            </div>
-        </div>
-
     </div>
+
     <div class="footer">
     </div>
 
 
 
-
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/datepicker.min.js"></script>
-    <script src="js/all.js"></script>
-    <script src="js/navbar.js"></script>
 <!-- updata-begin -->
-    
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
+
+<script src="js/jquery.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/datepicker.min.js"></script>
+<script src="js/all.js"></script>
+<script src="js/navbar.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
 <!-- updata-end -->
-       
+
 </body>
 
 </html>
